--- a/client/css/style.scss
+++ b/client/css/style.scss
@@ -126,6 +126,41 @@ a {
       font-size: 20px;
     }
   }
+
+  &__actions {
+    display: flex;
+    gap: 20px;
+  }
+
+  .signinBtn {
+    background-color: #fff;
+    // padding: 20px;
+    padding: 5px 10px;
+    border: 1px solid #1D1D1D;
+    border-radius: 20px;
+    color: #1D1D1D; 
+    font-size: 18px;
+    transition: all .2s;
+    
+    &:hover {
+      background: #565656;
+      color: #fff;
+      cursor: pointer;
+      border-color: #fff;
+    }
+  }
+
+  .registerBtn {
+    border: 1px solid #fff;
+    border-radius: 20px;
+    padding: 5px 10px;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    cursor: pointer;
+  }
+
 }
 
 
